= MediaWiki release notes =

Security reminder: MediaWiki does not require PHP's register_globals
setting since version 1.2.0. If you have it on, turn it *off* if you can.

== MediaWiki 1.9.2 ==

?? ??, 2007

This is a bug-fix update that fixes some installation and other minor
issues with the 1.9.1 release.

* (bug 8774) Fix path for GNU FDL rights icon on new installs
* (bug 8819) Fix full path disclosure with skins dependencies
* (bug 4268) Fixed data-loss bug in compressOld batch text compression
  affecting pages which had null edits (move, protect, etc) as second
  edit in a batch group. Isolated and patched by Travis Derouin.


== MediaWiki 1.9.1 ==

January 24, 2007

This is a bug-fix update that fixes some installation and upgrade issues
with the original 1.9.0 release.

* (bug 3000) Fall back to SCRIPT_NAME plus QUERY_STRING when REQUEST_URI is
  not available, as on IIS with PHP-CGI
* Security fix for DjVu images. (Only affects servers where .djvu file
  uploads are enabled and $wgDjvuToXML is set.)
* (bug 8638) Fix update from 1.4 and earlier
* (bug 8641) Fix order of updates to ipblocks table for updates from <=1.7
* (bug 8673) Minor fix for web service API content-type header
* Fix API revision list on PHP 5.2.1; bad reference assignment
* Fixed up the AjaxSearch
* Exclude settings files when generating documentation. That could
  expose the database user and password to remote users.
* ar: fix the 'create a new page' on search page when no exact match found
* Correct tooltip accesskey hint for Opera on the Macintosh
  (uses Shift-Esc-, not Ctrl-).
* (bug 8719) Firefox release notes lie! Fix tooltips for Firefox 2 on x11;
  accesskeys default settings appear to be same as Windows.


== MediaWiki 1.9 ==

January 10, 2007

This is the quarterly release snapshot for Winter 2007. While the code
has been running on Wikipedia for some time, installation and upgrade
bits may be less well tested. Bug fix releases may follow in the coming
days or weeks.

